--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
                     and modern tooling
                 </p>
 
-                <!-- معلومات الاتصال -->
                 <div class="flex flex-wrap gap-4 pt-4">
                     <div class="flex items-center gap-2">
                         <i class="fa-solid fa-location-dot text-[#74C0FC]"></i>
@@ -684,7 +683,7 @@
     <!-- Fotter -->
     <div class="bg-[#101624] h-[150px] flex flex-col">
         <h1 class="text-[#3B95F6] text-2xl font-bold pt-10 pl-10 pb-4">Thomas Nabil</h1>
-        <p class="text-white pl-9">© 2025 Ahmed Hemeda. All rights reserved.</p>
+        <p class="text-white pl-9">© 2025 Thomas Nabil. All rights reserved.</p>
     </div>
 
     <!-- JS -->
